[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webapicontrollers"
version = "0.0.1"
authors = [
  { name="Ben Robinson" },
]
description = "A basic API controller framework built on top of FastAPI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/codingflowdev/fast-api-controllers"